[gd_scene load_steps=18 format=3 uid="uid://pamoagaeskpe"]

[ext_resource type="Texture2D" uid="uid://bouj0gatqx3l4" path="res://assets/bunny/idleRework.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://blnfuiemc3jef" path="res://scenes/player/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://b7nsqaautce1j" path="res://assets/bunny/runRework.png" id="3_lvxji"]
[ext_resource type="Texture2D" uid="uid://bdbixr3xrn4r7" path="res://assets/bunny/jumpRework.png" id="4_p47bc"]
[ext_resource type="Script" uid="uid://d4otoxyfpspp" path="res://scenes/player/state/state_machine.gd" id="5_75vfm"]
[ext_resource type="Script" uid="uid://s0ngptcmi7ib" path="res://scenes/player/state/idle_state.gd" id="6_0owmy"]
[ext_resource type="Script" uid="uid://0q257bj74ol8" path="res://scenes/player/state/run_state.gd" id="7_5gtgg"]
[ext_resource type="Script" uid="uid://c6px6cpffvou3" path="res://scenes/player/state/jump_state.gd" id="8_h17s1"]
[ext_resource type="Script" uid="uid://bmt4bj2fwb14k" path="res://scenes/player/state/fall_state.gd" id="9_je7p5"]
[ext_resource type="PackedScene" uid="uid://bktw6ptdraaj2" path="res://scenes/explosion.tscn" id="10_h17s1"]

[sub_resource type="Animation" id="Animation_gmlin"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_3vyb7")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_0owmy"]
resource_name = "fall"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_p47bc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05, 0.075),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_dovo2"]
resource_name = "idle"
length = 1.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_3vyb7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_75vfm"]
resource_name = "jump"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_p47bc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_lvxji"]
resource_name = "run"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_lvxji")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lvxji"]
_data = {
&"RESET": SubResource("Animation_gmlin"),
&"fall": SubResource("Animation_0owmy"),
&"idle": SubResource("Animation_dovo2"),
&"jump": SubResource("Animation_75vfm"),
&"run": SubResource("Animation_lvxji")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhqgy"]
size = Vector2(10, 20)

[node name="Player" type="CharacterBody2D"]
collision_mask = 256
script = ExtResource("1_g2els")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("1_3vyb7")
hframes = 8

[node name="Camera2D" type="Camera2D" parent="Sprite2D"]
offset = Vector2(0, -25)
zoom = Vector2(3, 3)
process_callback = 0
limit_left = -300
limit_bottom = 150
limit_smoothed = true
position_smoothing_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lvxji")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -10)
shape = SubResource("RectangleShape2D_qhqgy")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("5_75vfm")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("6_0owmy")

[node name="RunState" type="Node" parent="StateMachine"]
script = ExtResource("7_5gtgg")

[node name="JumpState" type="Node" parent="StateMachine"]
script = ExtResource("8_h17s1")

[node name="FallState" type="Node" parent="StateMachine"]
script = ExtResource("9_je7p5")

[node name="Explosion" parent="." instance=ExtResource("10_h17s1")]
